examples/test/testpolicy17440.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy17440
  namespace: namespace196
spec:
  podSelector:
    matchLabels:
      key44: value23
      key49: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key34: value2
      podSelector:
        matchLabels:
          key6: value40
          key14: value46
          key43: value13
